# STEPToMesh

./: README.md
examples/basic_shapes/: basic_shapes.stp
src/: CMakeLists.txt  STEPToMesh.cpp
